--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Test project for Clean Architecture learning",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check:arch": "node check-architecture.js"
   },
   "keywords": ["clean-architecture", "typescript", "todo"],
   "author": "",
